--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "@vue/eslint-config-airbnb": "^5.1.0",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-plugin-load-script": "^1.3.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
