--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vue/eslint-config-airbnb": "^5.1.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-grid-responsive": "^0.2.0",
     "vue-plugin-load-script": "^1.3.0"
   },
   "devDependencies": {
