--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@vue/eslint-config-airbnb": "^5.1.0",
     "core-js": "^3.6.5",
+    "lodash": "^4.17.20",
     "vue": "^2.6.11",
     "vue-grid-responsive": "^0.2.0",
     "vue-plugin-load-script": "^1.3.0"
