Passage Vue 3. Ajout du plugin load-script. Les jeux fonctionnent.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "vue": "^3.3.4",
+    "vue-plugin-load-script": "^2.1.1",
     "vue-router": "^4.2.2"
   },
   "devDependencies": {
